<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.dhara.spectera.Activities.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:src="@drawable/image1" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="12dp"
            android:id="@+id/username"
            android:background="@color/zxing_transparent"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:background="@color/zxing_transparent"
            android:inputType="textPassword" />
        <Spinner
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginspinner"></Spinner>
        <Button
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#aaaa"
            android:text="@string/login"
            android:onClick="login"/>
    </LinearLayout>
</LinearLayout>
